terraform/src/main/k8s-deployment/k8s/eouil-services-chart/templates/service-ac.yaml
apiVersion: v1
kind: Service
metadata:
  name: ac-service
  namespace: default
  labels:
    app: ac-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8082
    - name: https
      port: 443
      targetPort: 8443  # 사용하지 않는다면 이 줄 제거해도 OK
  selector:
    app: ac-service
