terraform/src/main/k8s-deployment/k8s/eouil-services-chart/templates/service-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: default
  labels:
    app: auth-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8081
  selector:
    app: auth-service
